welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:22: error: Invalid literal number
  for (compteur1<-1to7) {
                  ^PictureMono2:22: error: illegal start of simple expression
  for (compteur1<-1to7) {
                  ^PictureMono2:24: error: ')' expected but '}' found.
}
^